cmake_minimum_required(VERSION 2.8)
project(libcds)
set(CMAKE_CXX_FLAGS "-std=c++11")

include_directories(src/utils/)
include_directories(src/static/sequence/)
include_directories(src/static/permutation/)
include_directories(src/static/bitsequence/)
include_directories(src/static/mapper/)
include_directories(src/static/coders/)

set (SOURCES
"src/static/bitsequence/BitSequence.cpp"
"src/static/bitsequence/BitSequenceBuilderDArray.cpp"
"src/static/bitsequence/BitSequenceBuilderRG.cpp"
"src/static/bitsequence/BitSequenceBuilderRRR.cpp"
"src/static/bitsequence/BitSequenceBuilderSDArray.cpp"
"src/static/bitsequence/BitSequenceDArray.cpp"
"src/static/bitsequence/BitSequenceRG.cpp"
"src/static/bitsequence/BitSequenceRGK.cpp"
"src/static/bitsequence/BitSequenceRRR.cpp"
"src/static/bitsequence/BitSequenceSDArray.cpp"
"src/static/bitsequence/sdarraySadakane.cpp"
"src/static/bitsequence/TableOffsetRRR.cpp"
"src/static/coders/huff.cpp"
"src/static/coders/HuffmanCoder.cpp"
"src/static/mapper/Mapper.cpp"
"src/static/mapper/MapperCont.cpp"
"src/static/mapper/MapperNone.cpp"
"src/static/mapper/MapperRev.cpp"
"src/static/permutation/perm.cpp"
"src/static/permutation/Permutation.cpp"
"src/static/permutation/PermutationBuilderMRRR.cpp"
"src/static/permutation/PermutationBuilderWT.cpp"
"src/static/permutation/PermutationMRRR.cpp"
"src/static/permutation/PermutationWT.cpp"
"src/static/sequence/BitmapsSequence.cpp"
"src/static/sequence/Sequence.cpp"
"src/static/sequence/SequenceAlphPart.cpp"
"src/static/sequence/SequenceBuilderAlphPart.cpp"
"src/static/sequence/SequenceBuilderGMR.cpp"
"src/static/sequence/SequenceBuilderGMRChunk.cpp"
"src/static/sequence/SequenceBuilderStr.cpp"
"src/static/sequence/SequenceBuilderWaveletMatrix.cpp"
"src/static/sequence/SequenceBuilderWaveletTree.cpp"
"src/static/sequence/SequenceBuilderWaveletTreeNoptrs.cpp"
"src/static/sequence/SequenceBuilderWaveletTreeNoptrsS.cpp"
"src/static/sequence/SequenceGMR.cpp"
"src/static/sequence/SequenceGMRChunk.cpp"
"src/static/sequence/WaveletMatrix.cpp"
"src/static/sequence/WaveletTree.cpp"
"src/static/sequence/WaveletTreeNoptrs.cpp"
"src/static/sequence/WaveletTreeNoptrsS.cpp"
"src/static/sequence/wt_coder.cpp"
"src/static/sequence/wt_coder_binary.cpp"
"src/static/sequence/wt_coder_huff.cpp"
"src/static/sequence/wt_node.cpp"
"src/static/sequence/wt_node_internal.cpp"
"src/static/sequence/wt_node_leaf.cpp"
"src/utils/Array.cpp"
"src/utils/cppUtils.cpp"
"src/utils/cppUtils.h"
"src/utils/cppUtils.o"
"src/utils/libcdsBitString.cpp"
"src/utils/timing.cpp"

"src/static/bitsequence/BitSequence.h"
"src/static/bitsequence/BitSequenceBuilder.h"
"src/static/bitsequence/BitSequenceBuilderDArray.h"
"src/static/bitsequence/BitSequenceBuilderRG.h"
"src/static/bitsequence/BitSequenceBuilderRRR.h"
"src/static/bitsequence/BitSequenceBuilderSDArray.h"
"src/static/bitsequence/BitSequenceDArray.h"
"src/static/bitsequence/BitSequenceRG.h"
"src/static/bitsequence/BitSequenceRGK.h"
"src/static/bitsequence/BitSequenceRRR.h"
"src/static/bitsequence/BitSequenceSDArray.h"
"src/static/bitsequence/sdarraySadakane.h"
"src/static/bitsequence/TableOffsetRRR.h"
"src/static/coders/Coder.h"
"src/static/coders/huff.cpp"
"src/static/coders/huff.h"
"src/static/coders/huff.o"
"src/static/coders/HuffmanCoder.h"
"src/static/mapper/Mapper.h"
"src/static/mapper/MapperCont.h"
"src/static/mapper/MapperNone.h"
"src/static/mapper/MapperRev.h"
"src/static/permutation/perm.h"
"src/static/permutation/Permutation.h"
"src/static/permutation/PermutationBuilder.h"
"src/static/permutation/PermutationBuilderMRRR.h"
"src/static/permutation/PermutationBuilderWT.h"
"src/static/permutation/PermutationMRRR.h"
"src/static/permutation/PermutationWT.h"
"src/static/sequence/BitmapsSequence.h"
"src/static/sequence/Sequence.h"
"src/static/sequence/SequenceAlphPart.cpp"
"src/static/sequence/SequenceAlphPart.h"
"src/static/sequence/SequenceAlphPart.o"
"src/static/sequence/SequenceBuilder.h"
"src/static/sequence/SequenceBuilderAlphPart.cpp"
"src/static/sequence/SequenceBuilderAlphPart.h"
"src/static/sequence/SequenceBuilderAlphPart.o"
"src/static/sequence/SequenceBuilderGMR.h"
"src/static/sequence/SequenceBuilderGMRChunk.cpp"
"src/static/sequence/SequenceBuilderGMRChunk.h"
"src/static/sequence/SequenceBuilderGMRChunk.o"
"src/static/sequence/SequenceBuilderStr.h"
"src/static/sequence/SequenceBuilderWaveletMatrix.h"
"src/static/sequence/SequenceBuilderWaveletTree.h"
"src/static/sequence/SequenceBuilderWaveletTreeNoptrs.h"
"src/static/sequence/SequenceBuilderWaveletTreeNoptrsS.h"
"src/static/sequence/SequenceGMR.h"
"src/static/sequence/SequenceGMRChunk.cpp"
"src/static/sequence/SequenceGMRChunk.h"
"src/static/sequence/SequenceGMRChunk.o"
"src/static/sequence/WaveletMatrix.h"
"src/static/sequence/WaveletTree.h"
"src/static/sequence/WaveletTreeNoptrs.h"
"src/static/sequence/WaveletTreeNoptrsS.h"
"src/static/sequence/wt_coder.h"
"src/static/sequence/wt_coder_binary.h"
"src/static/sequence/wt_coder_huff.cpp"
"src/static/sequence/wt_coder_huff.h"
"src/static/sequence/wt_coder_huff.o"
"src/static/sequence/wt_node.h"
"src/static/sequence/wt_node_internal.h"
"src/static/sequence/wt_node_leaf.h"
"src/utils/Array.h"
"src/utils/cppUtils.h"
"src/utils/libcdsBasics.h"
"src/utils/libcdsBitString.h"
"src/utils/libcdsSDArray.h"
"src/utils/libcdsTrees.h"
"src/utils/timing.h"
)


add_library(cds STATIC ${SOURCES})
target_include_directories (cds PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
install(TARGETS cds DESTINATION lib)



